tests Answer lauraye27/miw-frontend-foro#24